--- a/code/src/engine.vcxproj.filters
+++ b/code/src/engine.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClCompile Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\fish_scene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\fish_ecs_systems.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\vk_types.h">
@@ -99,6 +102,15 @@
     <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\fish_ecs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\fish_ecs_systems.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\nlohmann_json.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\nlohmann_json_fwd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\tiny_obj_loader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -113,12 +125,6 @@
     </ClInclude>
     <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\code\src\CMakeFiles\engine.dir\RelWithDebInfo\cmake_pch.hxx">
       <Filter>Precompile Header File</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\nlohmann_json.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\nlohmann_json_fwd.h">
-      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
