Large: Graphics pipelines and mesh buffers.

--- a/code/Shaders.vcxproj
+++ b/code/Shaders.vcxproj
@@ -105,6 +105,126 @@
     </Midl>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <CustomBuild Include="C:\Users\lukeh\Desktop\FishEngine\Fish\code\CMakeFiles\b7c0f7e5dca8c7f46d60a585b1f4e0e4\colored_triangle.frag.spv.rule">
+      <BuildInParallel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</BuildInParallel>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Generating C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.frag.spv</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">setlocal
+C:\VulkanSDK\1.3.280.0\Bin\glslangValidator.exe -V C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.frag -o C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.frag.spv
+if %errorlevel% neq 0 goto :cmEnd
+:cmEnd
+endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
+:cmErrorLevel
+exit /b %1
+:cmDone
+if %errorlevel% neq 0 goto :VCEnd</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.frag;%(AdditionalInputs)</AdditionalInputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.frag.spv</Outputs>
+      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</LinkObjects>
+      <BuildInParallel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</BuildInParallel>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Generating C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.frag.spv</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">setlocal
+C:\VulkanSDK\1.3.280.0\Bin\glslangValidator.exe -V C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.frag -o C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.frag.spv
+if %errorlevel% neq 0 goto :cmEnd
+:cmEnd
+endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
+:cmErrorLevel
+exit /b %1
+:cmDone
+if %errorlevel% neq 0 goto :VCEnd</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.frag;%(AdditionalInputs)</AdditionalInputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.frag.spv</Outputs>
+      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</LinkObjects>
+      <BuildInParallel Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">true</BuildInParallel>
+      <Message Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">Generating C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.frag.spv</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">setlocal
+C:\VulkanSDK\1.3.280.0\Bin\glslangValidator.exe -V C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.frag -o C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.frag.spv
+if %errorlevel% neq 0 goto :cmEnd
+:cmEnd
+endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
+:cmErrorLevel
+exit /b %1
+:cmDone
+if %errorlevel% neq 0 goto :VCEnd</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.frag;%(AdditionalInputs)</AdditionalInputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.frag.spv</Outputs>
+      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">false</LinkObjects>
+      <BuildInParallel Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">true</BuildInParallel>
+      <Message Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">Generating C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.frag.spv</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">setlocal
+C:\VulkanSDK\1.3.280.0\Bin\glslangValidator.exe -V C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.frag -o C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.frag.spv
+if %errorlevel% neq 0 goto :cmEnd
+:cmEnd
+endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
+:cmErrorLevel
+exit /b %1
+:cmDone
+if %errorlevel% neq 0 goto :VCEnd</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.frag;%(AdditionalInputs)</AdditionalInputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.frag.spv</Outputs>
+      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">false</LinkObjects>
+    </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="C:\Users\lukeh\Desktop\FishEngine\Fish\code\CMakeFiles\b7c0f7e5dca8c7f46d60a585b1f4e0e4\colored_triangle.vert.spv.rule">
+      <BuildInParallel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</BuildInParallel>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Generating C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.vert.spv</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">setlocal
+C:\VulkanSDK\1.3.280.0\Bin\glslangValidator.exe -V C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.vert -o C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.vert.spv
+if %errorlevel% neq 0 goto :cmEnd
+:cmEnd
+endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
+:cmErrorLevel
+exit /b %1
+:cmDone
+if %errorlevel% neq 0 goto :VCEnd</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.vert;%(AdditionalInputs)</AdditionalInputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.vert.spv</Outputs>
+      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</LinkObjects>
+      <BuildInParallel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</BuildInParallel>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Generating C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.vert.spv</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">setlocal
+C:\VulkanSDK\1.3.280.0\Bin\glslangValidator.exe -V C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.vert -o C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.vert.spv
+if %errorlevel% neq 0 goto :cmEnd
+:cmEnd
+endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
+:cmErrorLevel
+exit /b %1
+:cmDone
+if %errorlevel% neq 0 goto :VCEnd</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.vert;%(AdditionalInputs)</AdditionalInputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.vert.spv</Outputs>
+      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</LinkObjects>
+      <BuildInParallel Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">true</BuildInParallel>
+      <Message Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">Generating C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.vert.spv</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">setlocal
+C:\VulkanSDK\1.3.280.0\Bin\glslangValidator.exe -V C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.vert -o C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.vert.spv
+if %errorlevel% neq 0 goto :cmEnd
+:cmEnd
+endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
+:cmErrorLevel
+exit /b %1
+:cmDone
+if %errorlevel% neq 0 goto :VCEnd</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.vert;%(AdditionalInputs)</AdditionalInputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.vert.spv</Outputs>
+      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">false</LinkObjects>
+      <BuildInParallel Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">true</BuildInParallel>
+      <Message Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">Generating C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.vert.spv</Message>
+      <Command Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">setlocal
+C:\VulkanSDK\1.3.280.0\Bin\glslangValidator.exe -V C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.vert -o C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/colored_triangle.vert.spv
+if %errorlevel% neq 0 goto :cmEnd
+:cmEnd
+endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
+:cmErrorLevel
+exit /b %1
+:cmDone
+if %errorlevel% neq 0 goto :VCEnd</Command>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.vert;%(AdditionalInputs)</AdditionalInputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.vert.spv</Outputs>
+      <LinkObjects Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">false</LinkObjects>
+    </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
     <CustomBuild Include="C:\Users\lukeh\Desktop\FishEngine\Fish\code\CMakeFiles\b7c0f7e5dca8c7f46d60a585b1f4e0e4\default_lit.frag.spv.rule">
       <BuildInParallel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</BuildInParallel>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Generating C:/Users/lukeh/Desktop/FishEngine/Fish/shaders/default_lit.frag.spv</Message>
@@ -655,7 +775,7 @@ endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
 exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\default_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient_color.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\sky.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\textured_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangleMesh.vert.spv;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\default_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient_color.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\sky.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\textured_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangleMesh.vert.spv;%(AdditionalInputs)</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\code\CMakeFiles\Shaders</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</LinkObjects>
       <VerifyInputsAndOutputsExist Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</VerifyInputsAndOutputsExist>
@@ -668,7 +788,7 @@ endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
 exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\default_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient_color.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\sky.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\textured_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangleMesh.vert.spv;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\default_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient_color.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\sky.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\textured_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangleMesh.vert.spv;%(AdditionalInputs)</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\code\CMakeFiles\Shaders</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</LinkObjects>
       <VerifyInputsAndOutputsExist Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</VerifyInputsAndOutputsExist>
@@ -681,7 +801,7 @@ endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
 exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\default_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient_color.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\sky.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\textured_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangleMesh.vert.spv;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\default_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient_color.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\sky.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\textured_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangleMesh.vert.spv;%(AdditionalInputs)</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\code\CMakeFiles\Shaders</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">false</LinkObjects>
       <VerifyInputsAndOutputsExist Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">false</VerifyInputsAndOutputsExist>
@@ -694,7 +814,7 @@ endlocal &amp; call :cmErrorLevel %errorlevel% &amp; goto :cmDone
 exit /b %1
 :cmDone
 if %errorlevel% neq 0 goto :VCEnd</Command>
-      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\default_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient_color.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\sky.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\textured_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangleMesh.vert.spv;%(AdditionalInputs)</AdditionalInputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\colored_triangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\default_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\gradient_color.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\redTriangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\sky.comp.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\textured_lit.frag.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangle.vert.spv;C:\Users\lukeh\Desktop\FishEngine\Fish\shaders\triangleMesh.vert.spv;%(AdditionalInputs)</AdditionalInputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">C:\Users\lukeh\Desktop\FishEngine\Fish\code\CMakeFiles\Shaders</Outputs>
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">false</LinkObjects>
       <VerifyInputsAndOutputsExist Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">false</VerifyInputsAndOutputsExist>
