--- a/code/src/engine.vcxproj
+++ b/code/src/engine.vcxproj
@@ -499,6 +499,12 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </ClCompile>
     <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\fish_gpu_data.h" />
     <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\fish_pipeline.h" />
+    <ClCompile Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\fish_pipeline.cpp">
+      <ForcedIncludeFiles Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:/Users/lukeh/Desktop/FishEngine/Fish/code/src/CMakeFiles/engine.dir/Debug/cmake_pch.hxx;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <ForcedIncludeFiles Condition="'$(Configuration)|$(Platform)'=='Release|x64'">C:/Users/lukeh/Desktop/FishEngine/Fish/code/src/CMakeFiles/engine.dir/Release/cmake_pch.hxx;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <ForcedIncludeFiles Condition="'$(Configuration)|$(Platform)'=='MinSizeRel|x64'">C:/Users/lukeh/Desktop/FishEngine/Fish/code/src/CMakeFiles/engine.dir/MinSizeRel/cmake_pch.hxx;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <ForcedIncludeFiles Condition="'$(Configuration)|$(Platform)'=='RelWithDebInfo|x64'">C:/Users/lukeh/Desktop/FishEngine/Fish/code/src/CMakeFiles/engine.dir/RelWithDebInfo/cmake_pch.hxx;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+    </ClCompile>
     <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\fish_ecs.h" />
     <ClInclude Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\fish_ecs_systems.h" />
     <ClCompile Include="C:\Users\lukeh\Desktop\FishEngine\Fish\src\fish_ecs_systems.cpp">
