!! Completed 1.3 refactor and fixed previous errors.
Now is the time to begin refactoring what I have to a way that I like it, separating things into their own functions/structs/classes and respective namespaces.
If possible, I'd like to stabilise the branch a little more before merging to develop.
And comments everywhere need to be done before the merge.

--- a/code/src/imgui.ini
+++ b/code/src/imgui.ini
@@ -94,7 +94,12 @@ Size=124,54
 Collapsed=0
 
 [Window][Zoom]
-Pos=195,46
+Pos=38,114
 Size=117,54
+Collapsed=0
+
+[Window][Stats]
+Pos=55,502
+Size=226,99
 Collapsed=0
 
