--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,6 +35,8 @@ add_executable (engine
   fish_ecs.h
   fish_ecs_systems.h
   fish_ecs_systems.cpp
+  fish_logger.h
+  fish_logger.cpp
   nlohmann_json.h
   nlohmann_json_fwd.h
   tiny_obj_loader.h
