Moving objects at runtime and scene hierarchy list.
Slight error in code see imgui_scene_hierarchy() comments.

--- a/code/src/imgui.ini
+++ b/code/src/imgui.ini
@@ -70,7 +70,7 @@ Collapsed=0
 
 [Window][Debug Overlay]
 Pos=20,12
-Size=360,97
+Size=353,165
 Collapsed=0
 
 [Window][Hierarchy]
@@ -101,5 +101,10 @@ Collapsed=0
 [Window][Stats]
 Pos=55,502
 Size=226,99
+Collapsed=0
+
+[Window][Scene Hierarchy]
+Pos=22,184
+Size=301,257
 Collapsed=0
 
