--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,6 +37,8 @@ add_executable (engine
   fish_ecs_systems.cpp
   fish_logger.h
   fish_logger.cpp
+  fish_utils.h
+  fish_utils.cpp
   nlohmann_json.h
   nlohmann_json_fwd.h
   tiny_obj_loader.h
